--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,48 @@ a { color:blue; text-decoration: none;}
 figure {
     text-align: center;
 }
+
+figure img {
+    border-radius: 5%;
+}
+
+figure > figcaption {
+    font-size: .8rem;
+    font-style: italic;
+}
+
+table {
+    width:80%;
+    margin: auto;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.table-head {
+    text-align: center;
+    background-color: #cdcdcd;
+}
+
+.table-head th {
+    border-top: .1px solid black;
+    border-bottom: .1px solid black;
+    border-left: .1px solid black;
+}
+
+.table-head th:last-of-type {
+    border-right: .1px solid black;
+}
+
+
+.table-body {
+    text-align: center;
+}
+
+.table-body td {
+    border-bottom: .1px solid black;
+    border-left: .1px solid black;
+}
+
+.table-body td:last-of-type {
+    border-right: .1px solid black;
+}   
